fix: 🐛 mini fix trad and dark mode

--- a/src/components/04 - Templates/Footer/Footer.scss
+++ b/src/components/04 - Templates/Footer/Footer.scss
@@ -46,3 +46,17 @@
     text-align: end;
   }
 }
+
+[data-theme="dark"] {
+  .footer {
+    &__body {
+      border-top: 1px solid var(--light);
+    }
+
+    &__reseau {
+      .sprites {
+        fill: var(--light);
+      }
+    }
+  }
+}
